@@ -1,1 +1,0 @@
-2015/04/06	boot.s: Read following track, transition to 32bit.
