@@ -159,3 +159,6 @@ Interrupt
 Keyboard
 Screen
 Disk
+
+Today's job: Get through video setup, save parameters or something
+			 Maybe store EDD information, if i got time.
